--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,1 +1,6 @@
-<h1>Home#show</h1>
+<section class="welcome card">
+  <h1>Bookshelf</h1>
+  <h2>Built on Ruby on Rails secured with Auth0</h2>
+  <a class="btn green" href="/auth/auth0">Login</a>
+</section>
+ <%= debug session[:userinfo] %>
